crates/compiler/test_syntax/tests/snapshots/pass/ability_single_line.expr.formatted.roc
Hash implements hash : a -> U64 where a implements Hash

1